--- a/webMetics/Views/Grupo/ListaGruposDisponibles.cshtml
+++ b/webMetics/Views/Grupo/ListaGruposDisponibles.cshtml
@@ -101,7 +101,17 @@
                                                 <div class="card-text mb-3">Facilitador: Equipo del Área de Asesoría Docente de la Unidad METICS</div>
                                         }
                                     }
-                                    <div class="card-text mb-3">Área de competencia: @grupo.nombreTema</div>
+                                    <div class="card-text mb-3">
+                                        Área(s) de competencia:
+                                        @if (grupo.TemasSeleccionadosNombres != null)
+                                        {
+                                            @String.Join(", ", grupo.TemasSeleccionadosNombres)
+                                        }
+                                        else
+                                        {
+                                            <span>No hay temas asociados.</span>
+                                        }
+                                    </div>
                                     <div class="card-text mb-3">@grupo.nombreCategoria</div>
                                     <div class="mt-3">
                                         @if (grupo.fechaInicioInscripcion < ViewBag.DateNow && ViewBag.DateNow < grupo.fechaFinalizacionInscripcion)
@@ -257,8 +267,18 @@
                                                 <div class="card-text mb-3">Facilitador: Equipo del Área de Asesoría Docente de la Unidad METICS</div>
                                         }
                                     }
-                                    <div class="card-text mb-3">Área de competencia: @grupo.nombreTema</div>
-                                    <div class="card-text mb-3">@grupo.nombreCategoria</div>
+                                    <div class="card-text mb-3">
+                                        Área(s) de competencia:
+                                        @if (grupo.TemasSeleccionadosNombres != null)
+                                        {
+                                            @String.Join(", ", grupo.TemasSeleccionadosNombres)
+                                        }
+                                        else
+                                        {
+                                            <span>No hay temas asociados.</span>
+                                        }
+                                    </div>
+                                <div class="card-text mb-3">@grupo.nombreCategoria</div>
                                     <div class="mt-3">
                                         @if (ViewBag.Role == 1 || ViewBag.Role == 2)
                                         {
