--- a/webMetics/Views/Grupo/CrearGrupo.cshtml
+++ b/webMetics/Views/Grupo/CrearGrupo.cshtml
@@ -100,10 +100,24 @@
                             @Html.ValidationMessageFor(grupoModel => grupoModel.horario, "", new { @class = "text-danger" })
                         </div>
 
+                        @{
+                            var temas = ViewData["Temas"] as List<SelectListItem> ?? new List<SelectListItem>(); 
+                        }
+
                         <div class="form-group mt-1">
-                            @Html.LabelFor(grupoModel => grupoModel.nombreTema, new { Style = "font-size:22px" }) <a style="color:red;font-size:22px">*</a>
-                            @Html.DropDownListFor(grupoModel => grupoModel.idTema, ViewData["Temas"] as List<SelectListItem>, "Seleccione un tema...", new { @class = "form-select" })
-                            @Html.ValidationMessageFor(grupoModel => grupoModel.nombreTema, "", new { @class = "text-danger" })
+                            @Html.LabelFor(grupoModel => grupoModel.TemasSeleccionados, new { Style = "font-size:22px" }) <a style="color:red;font-size:22px">*</a>
+
+                            @foreach (var item in temas)
+                            {
+
+                                <div class="form-check">
+                                    <input type="checkbox" name="TemasSeleccionados" value="@item.Value" class="form-check-input" />
+                                    <label class="form-check-label">@item.Text</label>
+                                </div>
+                            }
+
+                            @Html.ValidationMessageFor(grupoModel => grupoModel.TemasSeleccionados, "", new { @class = "text-danger" })
+
                         </div>
 
                         <div class="form-group mt-1">
