--- a/webMetics/Views/Grupo/EditarGrupo.cshtml
+++ b/webMetics/Views/Grupo/EditarGrupo.cshtml
@@ -8,6 +8,14 @@
     var urlReferrer = Context.Request.Headers["Referer"].FirstOrDefault();
 }
 
+@{
+    string defaultAsesorId = "";
+    if (ViewBag.Role == 2)
+    {
+        defaultAsesorId = ViewBag.Id;
+    }
+}
+
 @if (ViewBag.Id != "" && (ViewBag.Role == 1 || ViewBag.Role == 2))
 {
     <div class="contenedor-tipos-actividades container-fluid">
@@ -136,12 +144,28 @@
                             @Html.ValidationMessageFor(grupoModel => grupoModel.nombreCategoria, "", new { @class = "text-danger" })
                         </div>
 
-                        <!-- Dropdown para asesores -->
-                        <div class="form-group mt-1">
-                            @Html.LabelFor(grupoModel => grupoModel.nombreAsesor, new { Style = "font-size:22px" })
-                            @Html.DropDownListFor(grupoModel => grupoModel.idAsesor, ViewData["Asesores"] as List<SelectListItem>, "Seleccione un(a) facilitador(a)...", new { @class = "form-select", @id = "asesorSelect" })
-                            @Html.ValidationMessageFor(grupoModel => grupoModel.nombreAsesor, "", new { @class = "text-danger" })
-                        </div>
+                        @if (ViewBag.Role == 2)
+                        {
+                            @Html.DropDownListFor(
+                                     grupoModel => grupoModel.idAsesor,
+                                     new SelectList(ViewData["Asesores"] as List<SelectListItem>, "Value", "Text", defaultAsesorId),
+                                     "Seleccione un(a) facilitador(a)...",
+                                     new { @class = "form-select", @hidden = true }
+                                     )
+                        }
+                        else
+                        {
+                            <div class="form-group mt-1">
+                                @Html.LabelFor(grupoModel => grupoModel.nombreAsesor, new { Style = "font-size:22px" })
+                                @Html.DropDownListFor(
+                                         grupoModel => grupoModel.idAsesor,
+                                         new SelectList(ViewData["Asesores"] as List<SelectListItem>, "Value", "Text"),
+                                         "Seleccione un(a) facilitador(a)...",
+                                         new { @class = "form-select", @id = "asesorSelect" }
+                                         )
+                                @Html.ValidationMessageFor(grupoModel => grupoModel.nombreAsesor, "", new { @class = "text-danger" })
+                            </div>
+                        }
 
                         <br />
                         <div class="row mt-3">
@@ -159,8 +183,6 @@
                                 @Html.ValidationMessageFor(grupoModel => grupoModel.fechaFinalizacionInscripcion, "", new { @class = "text-danger" })
                             </div>
                         </div>
-
-                        <br />
                         <div class="row mt-3">
                             <h4>Fechas del módulo</h4>
                             <div class="col">
@@ -179,11 +201,27 @@
 
                         <br />
                         <div class="row mt-3">
-                            <div class="col">
-                                <button type="submit" class="btn btn-primary">Guardar</button>
+                            @if (ViewBag.Adjunto != null && ViewBag.Adjunto.Length > 0)
+                            {
+                                <h4>Archivo actual</h4>
+                                <div class="d-flex align-items-center">
+                                    @Html.ActionLink(" ", "DescargarArchivo", "Grupo", new { idGrupo = Model.idGrupo }, new { @class = "text-muted bi bi-download me-2" })
+                                    <span class="text-muted">@Model.nombreArchivo</span>
+                                </div>
+                                <iframe class="my-2 rounded" id="pdfPreview" src="data:application/pdf;base64,@(ViewBag.Adjunto)" width="100%" height="500" style="border: none;"></iframe>
+                            }
+                            <h5 class="mt-4">Adjuntar nuevo archivo</h5>
+                            <div class="form-group">
+                                @Html.TextBoxFor(grupoModel => grupoModel.archivoAdjunto, null, new { type = "file", @class = "form-control" })
                             </div>
-                            <div class="col text-end">
-                                <a class="btn btn-danger" href="@Url.Action("Index")">Cancelar</a>
+                        </div>
+
+                        <div class="row justify-content-center m-4">
+                            <div class="col-auto">
+                                <a href="#" class="btn btn-secondary btn-block" onclick="history.go(-1); return false;">Cancelar</a>
+                            </div>
+                            <div class="col-auto">
+                                <input type="submit" class="btn btn-primary btn-block" value="Guardar" />
                             </div>
                         </div>
                     </div>
@@ -212,17 +250,22 @@ else
                 $('#lugarText').prop('disabled', true);
                 $('#lugarText').val('');
             } else {
-                $('#asesorSelect').prop('disabled', false);
+                if ('@ViewBag.Role' && '@ViewBag.Role' != 2) {
+                    $('#asesorSelect').prop('disabled', false);
+                }
                 $('#horarioText').prop('disabled', false);
                 $('#lugarText').prop('disabled', false);
             }
         }
-
+        
         verificarModalidad();
 
         // Llamar a la función cuando cambie la modalidad
         $('#modalidadSelect').change(function () {
             verificarModalidad();
+        });
+        $('#modalidadSelect').hover(function () {
+            deshabilitarAsesor();
         });
     });
 </script>
