--- a/webMetics/Views/Calificaciones/VerCalificaciones.cshtml
+++ b/webMetics/Views/Calificaciones/VerCalificaciones.cshtml
@@ -57,7 +57,8 @@
                                     <input type="hidden" name="idGrupo" id="idGrupo" value="@ViewBag.IdGrupo">
                                 </div>
 
-                                <div class="mb-4 bg-light p-3 rounded">
+                                <div class="mb-4 bg-light p-3 rounded d-flex">
+                                    <h4><i class="bi bi-exclamation-circle-fill me-2 text-secondary"></i></h4>
                                     <small class="text-muted">
                                         Subir un archivo en formato <strong>XLS</strong> o <strong>XLSX</strong> con las siguientes columnas:
                                         <br />
