--- a/webMetics/Views/Participante/VerParticipantes.cshtml
+++ b/webMetics/Views/Participante/VerParticipantes.cshtml
@@ -54,13 +54,12 @@
                                                 <input type="text" class="form-control" name="correoLimiteHoras" id="correoLimiteHoras" placeholder="@correoActual">
                                             }
                                         </div>
-                                        <input class="btn btn-secondary ms-2" type="submit" value="Guardar">
+                                        <input class="btn btn-outline-primary ms-2" type="submit" value="Actualizar">
                                     </div>
                                 </form>
                             }
                         </div>
                     </div>
-                    <hr />
                     
                     @using (Html.BeginForm("SubirArchivoExcel", "Participante", FormMethod.Post, new { enctype = "multipart/form-data" }))
                     {
@@ -105,11 +104,13 @@
             }
             else
             {
-                <div>
+                <hr />
+
+                <div class="my-4">
                     <!-- Barra de búsqueda -->
                     <form asp-action="BuscarParticipantes" asp-controller="Participante" method="get" class="input-group mb-3">
                         <input type="text" name="searchTerm" class="form-control" placeholder="Buscar participante" value="@Context.Request.Query["searchTerm"]" />
-                        <button class="btn btn-outline-secondary" type="submit">Buscar</button>
+                        <button class="btn btn-secondary" type="submit"><i class="bi bi-search"></i></button>
                     </form>
                 </div>
 
