-El botón para regresar regresa en las páginas que se han cargado, pero puede en cambio regresar al dashboard de los módulos. -Se arregla flujo para las páginas de calificaciones

--- a/webMetics/Views/Calificaciones/EditarCalificacion.cshtml
+++ b/webMetics/Views/Calificaciones/EditarCalificacion.cshtml
@@ -11,7 +11,7 @@
         @if (urlReferrer != null)
         {
             <div class="d-flex justify-content-start mb-3">
-                <a class="text-dark fs-4" onclick="history.go(-2); return false;" href=#>
+                <a class="text-dark fs-4" href="@Url.Action("VerCalificaciones", "Calificaciones", new { idGrupo = ViewBag.Calificacion.idGrupo,idParticipante = ViewBag.Calificacion.participante.idParticipante  })">
                     <i class="bi bi-arrow-left"></i>
                 </a>
             </div>
@@ -81,7 +81,9 @@
                 </table>
             }
             <div class="d-flex justify-content-center my-4">
-                <a href="#" class="btn btn-primary btn-block" onclick="history.go(-1); return false;">Regresar</a>
+                <a href="@Url.Action("VerCalificaciones", "Calificaciones", new { idGrupo = ViewBag.Calificacion.idGrupo, idParticipante = ViewBag.Calificacion.participante.idParticipante })" class="btn btn-primary btn-block">
+                    Regresar
+                </a>
             </div>
         </div>
     </div>
