Que no se pueda cambiar el idParticipante desde la URL de Módulos y Horas desde asesor.

--- a/webMetics/Views/Shared/_Layout.cshtml
+++ b/webMetics/Views/Shared/_Layout.cshtml
@@ -61,10 +61,10 @@
 
                                 <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
                                     <li>
-                                        @Html.ActionLink("Información personal", "InformacionPersonal", "Usuario", new { id = ViewBag.Id }, new { @class = "dropdown-item" })
+                                        @Html.ActionLink("Información personal", "InformacionPersonal", "Usuario", new { }, new { @class = "dropdown-item" })
                                     </li>
                                     <li>
-                                        @Html.ActionLink("Cambiar contraseña", "CambiarContrasena", "Usuario", new { id = ViewBag.Id }, new { @class = "dropdown-item" })
+                                        @Html.ActionLink("Cambiar contraseña", "CambiarContrasena", "Usuario", null, new { @class = "dropdown-item" })
                                     </li>
                                     <li><hr class="dropdown-divider"></li>
                                     <li>
