--- a/webMetics/Views/Participante/VerParticipantes.cshtml
+++ b/webMetics/Views/Participante/VerParticipantes.cshtml
@@ -37,66 +37,55 @@
         }
 
         <div class="table-responsive">
-            <div class="d-flex justify-content-between mb-4">
-                <div>
-                    <div class="mb-3 d-flex justify-content-between">
-                        <div class="w-100" style="max-width: 700px;">
-                            @using (Html.BeginForm("ActualizarCorreoLimiteHoras", "Inscripcion", FormMethod.Post, new { enctype = "multipart/form-data" }))
-                            {
-                                <form>
-                                    <small class="ms-1 text-secondary">Actualizar correo de notificación</small>
-                                    <div class="d-flex">
-                                        <div class="input-group">
-                                            @{
-                                                string correoActual = ViewBag.CorreoNotificacion?.ToString(); // Using null-conditional operator
-                                                correoActual = !string.IsNullOrEmpty(correoActual) ? correoActual : "ej., soporte.metics@ucr.ac.cr";
-                                                
-                                                        <input type="text" class="form-control" name="correoLimiteHoras" id="correoLimiteHoras" placeholder="@correoActual">
-                                            }
-                                        </div>
-                                        <input class="btn btn-outline-primary ms-2" type="submit" value="Actualizar">
-                                    </div>
-                                </form>
-                            }
-                        </div>
-                    </div>
-                    
+
+            <div class="d-flex justify-content-between">
+                <div class="mb-3" style="width: 70%;">
                     @using (Html.BeginForm("SubirArchivoExcel", "Participante", FormMethod.Post, new { enctype = "multipart/form-data" }))
                     {
                         <form>
                             <small class="ms-1 text-secondary">Subir lista de participantes</small>
-                            <div class="mb-2 d-flex align-items-center" style="max-width: 700px;">
-                                <input type="file" class="form-control" name="file" id="file" accept=".xls,.xlsx" required>
-                                @Html.ActionLink("   Plantilla", "DescargarPlantillaSubirParticipantes", "Participante", new { }, new { @class = "btn btn-outline-secondary bi bi-download ms-2 w-25" })
+                            <div class="mb-2 d-flex align-items-center">
+                                <input type="file" class="form-control" name="file" id="file" accept=".xls,.xlsx" style="max-width: 500px;" required>
                                 <input class="btn btn-secondary ms-2" type="submit" value="Subir archivo">
                             </div>
                         </form>
                     }
-                    <div class="mb-4 bg-light p-3 rounded d-flex">
-                        <h4><i class="bi bi-exclamation-circle-fill me-2 text-secondary"></i></h4>
+                    <div class="mb-4 bg-light p-3 rounded d-flex" style="max-width: 750px;">
+                        <h4><i class="bi bi-exclamation-circle-fill me-2 p-2 text-secondary"></i></h4>
                         <small class="text-muted">
                             Subir un archivo en formato <strong>XLS</strong> o <strong>XLSX</strong> con las siguientes columnas:
                             <br />
                             Unidad Académica, Nombre, Primer Apellido, Segundo Apellido, Correo Institucional, Horas Aprobadas
+                            <br />
+                            @Html.ActionLink("Descargar plantilla", "DescargarPlantillaSubirParticipantes", "Participante", new { }, new { @class = "btn btn-small btn-outline-secondary mt-2" })
                         </small>
                     </div>
                 </div>
 
-                <div class="d-flex justify-content-end">
-                    <div class="mx-1">
-                        @Html.ActionLink("   PDF", "ExportarParticipantesPDF", "Participante", new { }, new { @class = "btn btn-outline-secondary bi bi-download" })
-                    </div>
-                    <div class="mx-1">
-                        @Html.ActionLink("   Excel", "ExportarParticipantesExcel", "Participante", new { }, new { @class = "btn btn-outline-secondary bi bi-download" })
-                    </div>
-                    <div class="mx-1">
-                        @Html.ActionLink("   Word", "ExportarParticipantesWord", "Participante", new { }, new { @class = "btn btn-outline-secondary bi bi-download" })
-                    </div>
-                    <div class="mx-1">
-                        @Html.ActionLink("   Agregar", "FormularioParticipante", "Participante", new { }, new { @class = "btn btn-primary bi bi-person-plus" })
+                <div class="mb-3 d-flex justify-content-between w-25">
+                    <div class="w-100">
+                        @using (Html.BeginForm("ActualizarCorreoLimiteHoras", "Inscripcion", FormMethod.Post, new { enctype = "multipart/form-data" }))
+                        {
+                            <form>
+                                <small class="ms-1 text-secondary">Actualizar correo de notificación</small>
+                                <div class="d-flex">
+                                    <div class="input-group">
+                                        @{
+                                            string correoActual = ViewBag.CorreoNotificacion?.ToString(); // Using null-conditional operator
+                                            correoActual = !string.IsNullOrEmpty(correoActual) ? correoActual : "ej., soporte.metics@ucr.ac.cr";
+
+                                            <input type="text" class="form-control" name="correoLimiteHoras" id="correoLimiteHoras" placeholder="@correoActual">
+                                        }
+                                    </div>
+                                    <input class="btn btn-outline-primary ms-2" type="submit" value="Actualizar">
+                                </div>
+                            </form>
+                        }
                     </div>
                 </div>
             </div>
+
+            
 
             @if (ViewBag.ListaParticipantes == null)
             {
@@ -106,12 +95,29 @@
             {
                 <hr />
 
-                <div class="my-4">
-                    <!-- Barra de búsqueda -->
-                    <form asp-action="BuscarParticipantes" asp-controller="Participante" method="get" class="input-group mb-3">
-                        <input type="text" name="searchTerm" class="form-control" placeholder="Buscar participante" value="@Context.Request.Query["searchTerm"]" />
-                        <button class="btn btn-secondary" type="submit"><i class="bi bi-search"></i></button>
-                    </form>
+                <div class="d-flex justify-content-between align-items-center mt-2 mb-4">
+                    <div class="w-50">
+                        <!-- Barra de búsqueda -->
+                        <form asp-action="BuscarParticipantes" asp-controller="Participante" method="get" class="input-group">
+                            <input type="text" name="searchTerm" class="form-control" placeholder="Buscar participante" value="@Context.Request.Query["searchTerm"]" />
+                            <button class="btn btn-secondary" type="submit"><i class="bi bi-search"></i></button>
+                        </form>
+                    </div>
+
+                    <div class="d-flex justify-content-end">
+                        <div class="mx-1">
+                            @Html.ActionLink("   PDF", "ExportarParticipantesPDF", "Participante", new { }, new { @class = "btn btn-outline-secondary bi bi-download" })
+                        </div>
+                        <div class="mx-1">
+                            @Html.ActionLink("   Excel", "ExportarParticipantesExcel", "Participante", new { }, new { @class = "btn btn-outline-secondary bi bi-download" })
+                        </div>
+                        <div class="mx-1">
+                            @Html.ActionLink("   Word", "ExportarParticipantesWord", "Participante", new { }, new { @class = "btn btn-outline-secondary bi bi-download" })
+                        </div>
+                        <div class="mx-1">
+                            @Html.ActionLink("   Agregar", "FormularioParticipante", "Participante", new { }, new { @class = "btn btn-primary bi bi-person-plus" })
+                        </div>
+                    </div>
                 </div>
 
                 <table class="table table-striped" id="tblCustomers">
